src/app/components/combat-test/combat-test.component.scss
.centerCombat{
    color: white;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;

    width: 100%;
    max-width: 35rem;
    height: 100%;
    margin-left: auto;
    margin-right: auto;
    
    >div{
        border: 1px solid white;
        width: 95%;
        height: 95%;
        // margin: 4px;
        &:first-child{
            height: fit-content;
            margin-top: 8px;
            margin-bottom: -1px;
            border-top-left-radius: 12px;
            border-top-right-radius: 12px;
        }
        &:last-child{
            height: fit-content;
            margin-bottom: 8px;
            margin-top: -1px;
            border-bottom-left-radius: 12px;
            border-bottom-right-radius: 12px;
        }
    }
}

button{
    &:disabled{
        background-color: gainsboro;
        &:hover{
            color: #9f9f9f;
        }
    }
}

.actionDisabled{
    color: #9f9f9f !important;
    &:hover{
        color: #9f9f9f !important;
        background-color: black !important;
        cursor: default !important;
    }
}

.enemyArea{
    height: max-content !important;
    max-height: 28%;
    padding: 5px;
    min-height: 6em;
}

.enemyBox {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    p{
        padding-top: 0px;
        margin: 0;
    }
    img{
        max-width: 2em;
        padding: 5px;
    }
}

.memberBox {
    border: 1px solid white;
    min-height: 85px;
    max-height: 93px;
    width: 30%; //TODO: Dynamic width for 2 or 1 party member
    margin-bottom: 5px;
    margin-top: 5px;
    &:hover{
        label{ border-bottom: 1px solid black; cursor: pointer; }
        color: black;
        background-color: white;
        cursor: pointer;
    }
    
    p{
        padding-top: 0px;
        margin: 0;
    }
}

.innerBoxWrapper{
    max-height: 93px;
    display: grid;
    grid-template-rows: 2fr 1fr 1fr;
    text-align: center;
}

.playerOptions{
    padding: 5px;
    margin-top: -1px;
    min-height: 7em;
}

.playerBars{
    padding: 5px;
    margin-top: -1px;
}

.playerOptions p{
    margin: 0;
    padding: 0;
    font-size: 1.2rem;
    margin-bottom: 10px;
    
    &:hover{
        color: white;
        background-color: black;
        cursor: auto;
    }
}

@media (hover: hover) {
    .playerOptions p:hover {
    /* solves sticky problem */
    color: black;
    background-color: white;
    cursor: pointer;
    }

    .playerOptions p.noHighlight:hover{
            color: white;
            background-color: black;
            cursor: default;
    }
}

.enemyForm{
    display: flex;
    flex-wrap: wrap;
    height: 100%;
    justify-content: space-evenly;
    div{
        border: 1px solid white;
        height: 5em;
        width: 5em;
        margin-top: 5px;
        margin-bottom: 5px;

        &:hover{
            color: black;
            background-color: white;
            cursor: pointer;
            img{
                filter: invert(0%) sepia(0%) saturate(16%) hue-rotate(309deg) brightness(93%) contrast(107%);
            }
        }
    }
}

.partyForm {
    display: flex;
    height: 100%;
    justify-content: space-evenly;
    label{ border-bottom: 1px solid white; }
    min-height: 6em;
}

.storyText{
    font-size: 1.2em;
    overflow-y: hidden;
    margin: 0;
    max-height: 20%;
    width: 324px;
    padding: 5px;
    min-height: 6em;
    span{
        display: inline-block;
        padding: 0;
        padding-right: 2.5px;
        padding-left: 2.5px;
        padding-bottom: 2.5px;
    }
}

.showOverflow{
    overflow-y: scroll;
}

// width
::-webkit-scrollbar {
    width: 5px;
  }
  
 // track
  ::-webkit-scrollbar-track {
    background: #f1f1f1; 
  }
   
 // handle
  ::-webkit-scrollbar-thumb {
    background: #888; 
  }
  
  // handle on hover
  ::-webkit-scrollbar-thumb:hover {
    background: #555; 
  }

.invisible{
    visibility: hidden;
}

.hidden{
    display: none;
}

.enemySelected{
    border: 5px solid white !important;
}

.memberSelected{
    border: 5px solid white !important;
}

progress{
    height: 10px;
    width: 100%;
    text-align: center;
}

// #manaBar:after {
//     counter-reset: variable var(--manaValue);
//     content: counter(variable);
// }

// #playerHealthBar:after {
//     counter-reset: variable var(--healthValue);
//     content: counter(variable);
// }

progress.playerATB, progress.playerATB::-webkit-progress-value{
    border: 1px solid rgba(69, 69, 69, 0.764);
    background: #4caf50;
}

progress.enemyATB, progress.enemyATB::-webkit-progress-value{
    background: darkred;
}

#statusEffects{
    // width: 28px;
    display: flex;
    justify-content: space-evenly;
    span{
        display: block;
        margin: 0;
        padding: 0;
        font-size: 14px;
    }
}

.statusEffect{
    width: fit-content;
    border-radius: 10px;
    padding: 2px;
}

.poisonStatus{background: rgb(0, 75, 0);}
.speedStatus, .strengthStatus{background: rgb(150, 110, 9);}
.freezeStatus{background: rgb(20, 20, 151);}
.rageStatus, .burnStatus{background: rgb(138, 12, 38);}

#playerInventoryOptions{
    height: 100%;
}

#playerMainOptions, #playerMagicOptions, #playerInventoryOptions, #selectingTargetText{
    p{
        width: max-content;
        padding-left: 5px;
        &:first-of-type{
            padding-top: 5px;
        }
    }
}

.skull{
    filter: invert(99%) sepia(1%) saturate(3395%) hue-rotate(270deg) brightness(113%) contrast(101%);
}

/* Toggle styles for different events */
.enemyHit{ color: crimson !important; }
.enemyHitBorder{ border: 5px solid darkred !important; }
.playerHit{ border: 1px solid crimson !important; }
.purpleBorder{ border: 1px solid rebeccapurple !important; }
.yellowBorder{ border: 1px solid gold !important; }
.greenBorder{ border: 1px solid green !important; }

.greenText{ color: green !important; }
.redText{ color: darkred !important; }
.greyText{ color: #9f9f9f !important; }
.orchidText{ color: orchid !important; }
.lightBlueText{ color: skyblue !important; }
.playerText{ color: #4caf50 !important; }
.crimsonText{ color: crimson !important; }
.goldText{ color: gold !important; }
.pinkText{ color: rgb(247, 158, 173) };
.underline{ text-decoration: underline !important; }

// .playerHealthBarPoison::-webkit-progress-value{ background: green !important; }

.enemyHitSVG{ filter: invert(16%) sepia(94%) saturate(4548%) hue-rotate(341deg) brightness(88%) contrast(95%) !important; } //DarkRed/Crimson
.whiteFilter { filter: invert(99%) sepia(1%) saturate(3395%) hue-rotate(270deg) brightness(113%) contrast(101%) !important; } //White
.greenFilter{ filter: invert(42%) sepia(29%) saturate(1040%) hue-rotate(84deg) brightness(85%) contrast(96%) !important; } //Green
.redFilter{ filter: invert(16%) sepia(67%) saturate(7163%) hue-rotate(357deg) brightness(101%) contrast(115%) !important; } //Red
.yellowFilter { filter: invert(82%) sepia(73%) saturate(1004%) hue-rotate(9deg) brightness(105%) contrast(104%) !important; } //Yellow
.lightBlueFilter { filter: invert(74%) sepia(42%) saturate(361%) hue-rotate(155deg) brightness(99%) contrast(86%) !important; } //SkyBlue

